[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,9 @@
         </div>
         <br>
         <div class="center text-big bold">
-            this is my firstt web app
+            Hi! I am your webapp.
+            <h4> New Line</h4>
+    some local changes have made
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
